fix(components): improve layer contrast color

--- a/packages/components/src/dropdown/element.css
+++ b/packages/components/src/dropdown/element.css
@@ -2,6 +2,7 @@
   --padding: var(--bp-size-6);
   --filter: drop-shadow(var(--bp-object-shadow-200));
   --background: var(--bp-layer-container-background);
+  --border: var(--bp-object-border-width-100) solid var(--bp-object-border-color-100);
   --color: var(--bp-text-color-500);
   --width: max-content;
   --height: max-content;
@@ -24,6 +25,7 @@
 dialog {
   color: var(--color);
   background: var(--background);
+  border: var(--border);
   filter: var(--filter);
   padding: var(--padding);
   opacity: var(--opacity);
@@ -32,7 +34,6 @@ dialog {
   min-width: var(--min-width);
   min-height: var(--min-height);
   font-size: var(--font-size);
-  border: 0;
   display: flex;
   flex-direction: column;
   overflow: visible;
@@ -65,4 +66,8 @@ bp-button-icon {
 
 dialog[hidden] {
   display: flex !important;
+}
+
+::slotted(bp-menu) {
+  --width: 100%;
 }
